--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -11,7 +11,7 @@ a {
 }
 
 h1 {
-  font-style: italic;
+style: italic;
   margin-bottom: 10px;
 }
 
@@ -97,7 +97,7 @@ form {
   margin: 10px;
 }
 
-input {
+input.text {
   width: 360px;
   display: block;
   font-size: 13px;
